--- a/MyShopAug/MyShopAug.UI/Views/ProductManager/Create.cshtml
+++ b/MyShopAug/MyShopAug.UI/Views/ProductManager/Create.cshtml
@@ -39,9 +39,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ProductCategories, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Product.Category, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-               @Html.DropDownListFor(model => model.ProductCategories, new SelectList(Model.ProductCategories, "Category", "Category"),new { htmlAttributes = new { @class = "dropdown-menu" } })
+               @Html.DropDownListFor(model => model.Product.Category, new SelectList(Model.ProductCategories, "Category", "Category"),new { htmlAttributes = new { @class = "dropdown-menu" } })
             </div>
         </div>
 
